Target net6.0, update all dependencies to latest

--- a/src/Saunter/UI/index.html
+++ b/src/Saunter/UI/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+      }
+    </style>
     <link rel="stylesheet" type="text/css" href="./default.min.css">
   </head>
   <body>
